test/corpus/expr_const.txt
===================
boolean expressions
===================

true;
false;

---

(module
  (true)
  (false))


===============================================================================
int literals 
===============================================================================

1;
0x00;
1000;
1_000;
1_000_999;
0b00111;

---

(module
  (Int)
  (Int)
  (Int)
  (Int)
  (Int)
  (Int))

===============================================================================
float literals 
===============================================================================

1.0;
1_000.5;
1.0e-3;
1_000.0e1_0;

---

(module
  (Float)
  (Float)
  (Float)
  (Float))

===============
string literals
===============
 
"haxe";
'haxe';

---

(module
  (String
    (fragment))
  (String
    (fragment)))

===============================================================================
strings containing comment-like content literals
===============================================================================

"//ok\n//what";

---

(module
  (String
    (fragment)
    (escape_sequence)
    (fragment)))

===============================================================================
string escape sequence
===============================================================================

"";
'';
"\"";
"a\"b";
'a\'b';
"it's a tiny tiny world";
'"hello"';
'\'hello\'';

---

(module
  (String)
  (String)
  (String
    (escape_sequence))
  (String
    (fragment)
    (escape_sequence)
    (fragment))
  (String
    (fragment)
    (escape_sequence)
    (fragment))
  (String
    (fragment))
  (String
    (fragment))
  (String
    (escape_sequence)
    (fragment)
    (escape_sequence)))

===============================================================================
string line continuations literals
===============================================================================

"hello
world";

"hello

world";

'hello
world';

'hello

world';

---

(module
  (String
    (fragment))
  (String
    (fragment))
  (String
    (fragment))
  (String
    (fragment)))

===============================================================================
string interpolation literals
===============================================================================

'Some $user say';
'My name is ${user.name} and i am';
'1 + 2 = ${1 + 2}';
'${"nested"}';

---

(module
  (String
    (fragment)
    (interpolation
      (identifier))
    (fragment))
  (String
    (fragment)
    (interpolation
      (EField
        object: (identifier)
        name: (identifier)))
    (fragment))
  (String
    (fragment)
    (interpolation
      (EBinop
        left: (Int)
        right: (Int))))
  (String
    (interpolation
      (String
        (fragment)))))

===================================================================
string double-quoted literals containing interpolation-like content
===================================================================
 
"$2a$05$bvIG6Nmid91Mu9RcmmWZfO";

---

(module
  (String
    (fragment)))

===============================================================================
regular expression literals
===============================================================================

~/haxe/gi;

---

(module
  (Regexp))

=====================================
trailing-dot float as statement
=====================================

class C { function f() { return 0.; } }

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (EReturn
          (Float))))))

=====================================
trailing-dot float in arithmetic and var list
=====================================

class C { function f() { var x = 0., y = 1000. + 2.; } }

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (EVars
          name: (identifier)
          value: (Float)
          name: (identifier)
          value: (EBinop
            left: (Float)
            right: (Float)))))))

=====================================
interval is not a trailing-dot float
=====================================

class C { function f() { for (i in 0...10) {} } }

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (EFor
          var: (identifier)
          iterable: (EBinop
            left: (Int)
            right: (Int))
          body: (EBlock))))))

=====================================
integer field access is not a trailing-dot float
=====================================

class C { function f() { return arr[0].length; } }

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (EReturn
          (EField
            object: (EArray
              array: (identifier)
              index: (Int))
            name: (identifier)))))))

=====================================
single-quote dollar escape interpolation
=====================================

class C { function f() { trace('$p = $$x'); } }

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (ECall
          callee: (identifier)
          args: (String
            (interpolation
              (identifier))
            (fragment)
            (escape_sequence)
            (fragment)))))))



=================================
float literals with a leading dot
=================================

.5;
.125e3;

---

(module
  (Float)
  (Float))


=========================================
float literals with an uppercase exponent
=========================================

1.0E5;
2e10;
1E-3;

---

(module
  (Float)
  (Float)
  (Float))

=========================================
float with a single digit before exponent
=========================================

class C { var a = 1e5; var b = 1E5; }

---

(module
  (ClassType
    name: (type_name)
    (ClassVar
      name: (identifier)
      (Float))
    (ClassVar
      name: (identifier)
      (Float))))
