test/corpus/expr_function.txt
===================
function expression
===================

function() {}

---

(module
  (EFunction
    (EBlock)))

===================
arrow function expression
===================

() -> {}

---

(module
  (EArrowFunction
    (EBlock)))

=====================================
underscore arrow-function parameter
=====================================

class C { function f() { return g((_) -> 0); } }

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (EReturn
          (ECall
            callee: (identifier)
            args: (EArrowFunction
              args: (FunctionArg
                name: (identifier))
              body: (Int))))))))

=====================================
local static var
=====================================

function f() {
	static var faces : Array<Int> = [];
	static final n = 1;
}

---

(module
  (EFunction
    name: (identifier)
    body: (EBlock
      (EVars
        name: (identifier)
        type: (ComplexType
          (TypePath
            name: (type_name)
            params: (ComplexType
              (TypePath
                name: (type_name)))))
        value: (EArrayDecl))
      (EVars
        name: (identifier)
        value: (Int)))))

=====================================
inline constructor call
=====================================

function f() {
	var q = inline new h3d.Quat();
}

---

(module
  (EFunction
    name: (identifier)
    body: (EBlock
      (EVars
        name: (identifier)
        value: (ENew
          (TypePath
            pack: (package_name)
            name: (type_name)))))))
